[gd_scene load_steps=2 format=3 uid="uid://biv606gadk4g0"]

[ext_resource type="Script" path="res://game/scenes/Electronics_lab/play_with_resistors.gd" id="1_c34gp"]

[node name="play_with_resistors" type="Node2D"]
script = ExtResource("1_c34gp")

[node name="Button" type="Button" parent="."]
offset_left = 917.0
offset_top = 88.0
offset_right = 1035.0
offset_bottom = 155.0
text = "RESISTOR"

[node name="Button2" type="Button" parent="."]
offset_left = 923.0
offset_top = 188.0
offset_right = 1033.0
offset_bottom = 247.0
text = "WIRE
"

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(395, 157)

[node name="res_container" type="Node" parent="."]

[node name="wire_container" type="Node" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
